J'ai ajouté les début des pages infomativs dans l'acceuil

--- a/index.htm
+++ b/index.htm
@@ -21,11 +21,67 @@
 		
            <!--<img src="chat.jpg" alt="Chat">-->
             <div>
-                <h2>Les meilleurs loremps ipsm du monde en réel pour de vrai</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
-                </p>
-                
+				<table>
+					<tr>
+						<td>
+							<h2> Vous voulez adopter un animal de compagnie?</h2>
+							<p>
+							Notre association vous permet d'adopter l'animal de vos rêves très facilement et rapidement. Mais il y a toujours certaines conditions aux quels vous devez adhérer pour pouvoir le faire...
+							</p>
+							<p id="bouton"><a href="adopter.htm">Continuer</a></p>
+						</td>
+					</tr>
+                </table>
+				<br>
+				<table>
+					<tr>
+						<td>
+							<h2> Toutes les étapes pour un chat heureux !</h2>
+							<p>
+							On a recuillit toutes les informations et les recommendations d'après les psycologues d'animaux les plus renommés...
+							</p>
+							<p id="bouton"><a href="chat-heureux.htm">Continuer</a></p>
+						</td>
+					</tr>
+                </table>
+				<br>
+				<table>
+					<tr>
+						<td>
+							<h2> Sleepy le chaton</h2>
+							<p>
+							<img src="chats/sleepy.jpg" id="imganimal"/>
+							Sleepy viens d'arriver chez nou il y a une semaine, et il a déjà beacoup de fans...
+							</p>
+							<p id="bouton"><a href="chatsleepy.htm">Continuer</a></p>
+						</td>
+					</tr>
+                </table>
+				<br>
+				<table>
+					<tr>
+						<td>
+							<h2> 12 étapes pour bien s'occuper de son hérisson</h2>
+							<p>
+							L'hérisson comme animal de compagnie peut paraître étrange mais de plus en plus de gens décident d'adopter cette superbe animal. Voici comment s'en occuper...
+							</p>
+							<p id="bouton"><a href="soccuper-herisson.htm">Continuer</a></p>
+						</td>
+					</tr>
+                </table>
+				<br>
+				<table>
+					<tr>
+						<td>
+							<h2> Raisons pour adopter un serpent</h2>
+							<p>
+							Beaucoup de personnes sont intéressés par les reptiles et plus spécifiquement les serpent comme animal de compagie, mais est-ce que ça peut être l'animal parfait pour vous?...
+							</p>
+							<p id="bouton"><a href="adopter-serpent.htm">Continuer</a></p>
+						</td>
+					</tr>
+                </table>
+				<br>
                 <iframe id='vid' width='480' height='270' src='https://www.youtube.com/embed/26U_seo0a1g?enablejsapi=1' frameborder=0></iframe>
             </div>
 		
