Celui la j'ai pas encore terminé

--- a/chat-heureux.htm
+++ b/chat-heureux.htm
@@ -23,7 +23,7 @@
             <div>
 				<h2> Toutes les étapes pour un chat heureux !</h2>
 				<p>
-				On a recuillit toutes les informations et les recommendations d'après les psycologues d'animaux les plus renommés...
+				On a recuillit toutes les informations et les recommendations d'après les psycologues d'animaux les plus renommés
 				</p>
 			</div>
 		
