--- a/adopter-serpent.htm
+++ b/adopter-serpent.htm
@@ -23,37 +23,50 @@
             <div>
 				<h2> Raisons pour adopter un serpent</h2>
 				<p>
-				Beaucoup de personnes sont intéressés par les reptiles et plus spécifiquement les serpent comme animal de compagie, mais est-ce que ça peut être l'animal parfait pour vous?...
+				Beaucoup de personnes sont intéressés par les reptiles et plus spécifiquement les serpent comme animal de compagie, mais est-ce que ça peut être l'animal parfait pour vous?
+				</p>
+				<br>
+				<p>
+				Si vous lisez cette article c'est que vous êtes fasciné par les serpents. Et il faut savoir qu'il existe énormement d'espèces avec des besoins et des personnalités différente. La semaine prochaine il y aura un article complet sur celà.
 				</p>
 				<br>
 				<ol>
 					<li>
 						C'est silencieux
 					</li>
+					<br>
 					<li>
 						C'est facil à nourrire, il suffit de lui donner à manger une fois par semiane environ !
 					</li>
+					<br>
 					<li>
 						Le terrarium peut être très décoratif et jolie
 					</li>
+					<br>
 					<li>
 						Des excréments inodores et pratiques
 					</li>
+					<br>
 					<li>
 						Le nettoyage du terrarium est facile, et il n'est pas nécessaire de le faire très fréquament (1fois toutes les 3 semaines généralement)
 					</li>
+					<br>
 					<li>
 						Le serpent ne fait pas de bêtises
 					</li>
+					<br>
 					<li>
 						Il n'a pas besoin de vaccins
 					</li>
+					<br>
 					<li>
 						ça durée de vie est de 15 à 20 ans en moyenne
 					</li>
+					<br>
 					<li>
-						Pasd'alergies
+						Pas d'alergies
 					</li>
+					<br>
 					<li>
 						Pas de promenades
 					</li>
