J'ai ajouté les début des pages infomatives dans l'acceuil

--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@
 							<h2> Sleepy le chaton</h2>
 							<p>
 							<img src="chats/sleepy.jpg" id="imganimal"/>
-							Sleepy viens d'arriver chez nou il y a une semaine, et il a déjà beacoup de fans...
+							Sleepy viens d'arriver chez nous il y a une semaine, et il a déjà beacoup de fans...
 							</p>
 							<p id="bouton"><a href="chatsleepy.htm">Continuer</a></p>
 						</td>
