Je pense que 6 c'est assez

--- a/chat-heureux.htm
+++ b/chat-heureux.htm
@@ -17,14 +17,144 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
                 </p>
+				<br>
             </div>
 		
            <!--<img src="chat.jpg" alt="Chat">-->
             <div>
 				<h2> Toutes les étapes pour un chat heureux !</h2>
 				<p>
-				On a recuillit toutes les informations et les recommendations d'après les psycologues d'animaux les plus renommés
+				On a recuillit toutes les informations et les recommendations d'après les psycologues d'animaux les plus renommés, pour vous simplifier les recherches.
 				</p>
+				<br>
+				<p>
+				On va séparer ces informations en plusieurs étapes a suivre :
+				</p>
+				<br>
+				<ol>
+					<li>
+						<h4>Offrez-lui ses aliments favoris de temps en temps</h4>
+						<p>
+						offrez-lui des friandises lorsqu'il a fait une bonne action ou qu'il s'est bien comporté, il ne faut pas donner ces aliments tout le temps ou en grande quantité car généralement elles sont très grasses.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Donnez-lui de la nourriture à température ambiante</h4>
+						<p>
+						À  la base, votre chat est un chasseur. Lorsqu'il mange ses proies elles sont à 38°. Évitez donc de lui donner de la nourriture trop froide !
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Un endroit dédié à ses repas</h4>
+						<p>
+						Choisissez un endroit calme, où il pourra prendre tous ses repas. Veillez à ce qu'il ne soit jamais situé à côté de son bac à litière.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Préférez les gamelles basses</h4>
+						<p>
+						N'oubliez pas que la moustache de votre chat est très sensible !
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>De l'eau à volonté</h4>
+						<p>
+						Mettez toujours de l'eau propre à sa disposition.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>N'oubliez pas l'herbe à chat</h4>
+						<p>
+						Plantez de l'herbe à chat, dans votre jardin ou sur votre balcon. Votre chat en raffole !
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Gardez toujours sa litière propre</h4>
+						<p>
+						Entretenez-la deux fois par semaine, avec renouvellement complet et nettoyage hebdomadaire.
+						</p>
+						<p>
+						Il est également important d'installer la litière à un endrois traquille.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Laissez votre chat vous regarder de haut</h4>
+						<p>
+						 Les chats adorent s'installer en hauteur. offrez-lui un arbre à chat !
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Un bain de soleil</h4>
+						<p>
+						Donnez la possibilité à votre chat d'avoir un regard sur le monde. Les niches qui se fixent sur les rebords des fenêtres sont parfaites pour faire la sieste. Il pourra également contempler l'extérieur tout en prenant un bain de soleil.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Des cachettes</h4>
+						<p>
+						Gardez des cachettes à votre chat, il aime les endroits secrets (cartons, sacs en papier, arbre à chat). Veillez tout de même à ce ces endroits soient sans danger pour lui.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Un griffoir de compétition</h4>
+						<p>
+						Mettez à sa disposition un bon griffoir pour qu'il se fasse les griffes.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Jouez avec lui</h4>
+						<p>
+						 Les tiges souples sur lesquelles sont suspendues par un lien solide des plumes, peluches et autres babioles, sont n°1 au hit-parade des jouets pour chats.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Ne lésinez pas sur les caresses</h4>
+						<p>
+						Animal sensuel, le chat adore tout autant "se caresser à vous" que se laisser caresser, en partie parce que ce contact lui permet de répandre son odeur.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4> Faites-lui des clins d'œil ;)</h4>
+						<p>
+						Les chats aiment partager un clignement de l'œil. Croisez le regard de votre chat puis clignez des yeux.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Remerciez-le pour ses "cadeaux"</h4>
+						<p>
+						Si un chat vous ramène ses proies, il s'agit pour lui d'un acte d'amour. Il vous considère comme un chaton ne sachant pas chasser ou comme un mauvais chasseur à former.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Consacrez-lui du temps</h4>
+						<p>
+						Un chat aime son maître. S'il vit en appartement, il sera d'autant plus avide de compagnie humaine.
+						</p>
+						<br>
+					</li>
+					<li>
+						<h4>Respectez ses nuits</h4>
+						<p>
+						C'est au crépuscule et à l'aube qu'un chat est le plus actif. Il n'aime pas passer la nuit dehors, mais préfère rester au chaud.
+						</p>
+						<br>
+					</li>
+				</ol>
 			</div>
 		
            <!--<img src="chat.jpg" alt="Chat">-->
