lien menu vers qui-nous-sommes.htm + content width

--- a/menu.htm
+++ b/menu.htm
@@ -10,7 +10,7 @@
 	<li><a href="questionnaire.htm">Questionnaire</a></li>
         <li>FAQ
             <ul>
-                <li>Qui sommes nous</li>
+                <li><a href="qui-sommes-nous.htm">Qui sommes nous</a></li>
                 <li>Adopter un animal</li>
                 <li>Nous confier un animal</li>
                 <li>Mentions légales</li>
