J'ai rajouté les caractéristiques des chats et la deuxieme photo

--- a/chatsatin.htm
+++ b/chatsatin.htm
@@ -1,11 +1,10 @@
-
 <!doctype html>
 <html>
     <head>
         <title>Chats</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
-		<link rel="stylesheet" type="text/css" href="css/satin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
@@ -21,15 +20,33 @@
             </div>
 			
 			<div>
+				<h3>Satin</h3>
 				<table>
 					<tr>
-						<td><img src="chats/satin.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chats/satin.jpg" class="chat"/></td>
 						<td>
 							<p>Depuis très lontemps les chats noir ont était associés avec des idées négatives. mais on est là pour vous assurez q'un chat noir n'est qu'une petite boule d'amour :)<p>
 							<br>
 							<p>Vous serez très ravis de rencontrer Satin qui est un de nos chats les plus câlineux !</p>
 							<br>
-							<p>Pour rencontrer ou adopter Satin, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="caracteres">
+							<ul>
+								<li>Race : Chat, européen</li>
+								<li>Age: 2 ans</li>
+								<li>Sexe: Femelle</li>
+								<li>Taille: Moyenne</li>
+							</ul>
+						</td>
+						<td colspan="2">
+							<img src="chats/satin2.jpg" class="chat"/>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
+							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 						</td>
 					</tr>
 				</table>
