--- a/chatsleepy.htm
+++ b/chatsleepy.htm
@@ -4,7 +4,7 @@
         <title>Chats</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
-		<link rel="stylesheet" type="text/css" href="css/satin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
@@ -20,14 +20,31 @@
             </div>
 			
 			<div>
-				<table>
+				<h3>Sleepy le chaton</h3>
+				<table id="tab1">
 					<tr>
-						<td><img src="chats/sleepy.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chats/sleepy.jpg" class="chat"/></td>
 						<td>
 							<p>Sleepy est un chaton de 1 mois et demi. c'est une boule d'énergie mais il apprécie beaucoup ces siestes :3</p>
 							<br>
 							<p>Sleepy grandira avec votre famille, et il est très décontracté autour des autres animaux.</p>
 							<br>
+						</td>
+					</tr>
+					<tr>
+						<td class="caracteres">
+							<ul>
+								<li>Race : Chat, européen</li>
+								<li>Age: 3 mois</li>
+								<li>Sexe: Male</li>
+							</ul>
+						</td>
+						<td colspan="2">
+							<img src="chats/sleepy3.jpg" class="chat"/>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
 							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 						</td>
 					</tr>
