--- a/chattigre.htm
+++ b/chattigre.htm
@@ -4,7 +4,7 @@
         <title>Chats</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
-		<link rel="stylesheet" type="text/css" href="css/satin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
@@ -20,15 +20,33 @@
             </div>
 			
 			<div>
+				<h3>Satin</h3>
 				<table>
 					<tr>
-						<td><img src="chats/tigre.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chats/tigre2.jpg" class="chat"/></td>
 						<td>
 							<p>Tigre est un chat très sportif et adore les enfants. En plus il est très facile de jouer avec lui.</p>
 							<br>
 							<p>Tigre est le chat qui va changer votre point de vu sur les chats ^^</p>
 							<br>
-							<p>Pour rencontrer ou adopter Tigre, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="caracteres">
+							<ul>
+								<li>Race : Chat, Maine Coon</li>
+								<li>Age: 3 ans</li>
+								<li>Sexe: Femelle</li>
+								<li>Taille: grand</li>
+							</ul>
+						</td>
+						<td colspan="2">
+							<img src="chats/tigre.jpg" class="chat"/>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
+							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 						</td>
 					</tr>
 				</table>
