J'ai rajouté les caractéristiques et la deuxieme photo

--- a/chien.htm
+++ b/chien.htm
@@ -21,7 +21,7 @@
 			<div>
 				<p>
 					<h3>Belle</h3>
-					<a href="chien1.htm"><img src="chiens/1.jpg" class="animaux"/><a>
+					<a href="chien1.htm"><img src="chiens/belle2.jpg" class="animaux"/><a>
 					<br>
 					
 					<h3>Moon</h3>
@@ -29,7 +29,7 @@
 					<br>
 					
 					<h3>Suki</h3>
-					<a href="chien3.htm"><img src="chiens/3.jpg" class="animaux"/><a>
+					<a href="chien3.htm"><img src="chiens/suki3.jpg" class="animaux"/><a>
 					<br>
 				</p>
 			</div>
