--- a/chien1.htm
+++ b/chien1.htm
@@ -4,7 +4,7 @@
         <title>Chats</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
-		<link rel="stylesheet" type="text/css" href="css/satin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
@@ -20,15 +20,37 @@
             </div>
 			
 			<div>
+				<h3>Belle</h3>
 				<table>
 					<tr>
-						<td><img src="chiens/1.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chiens/belle2.jpg" class="chat"/></td>
 						<td>
-							<p>a<p>
+							<p>
+							Belle est un petit chiot de 5 semaine, il a était trouvé tout seul sans sa mère, mais il est déjà très havitué aux gens.
+							</p>
 							<br>
-							<p>a</p>
+							<p>
+							Elle est pleine de vie et adore jouer. Elle est courageuse autour des autres chiens également alors si vous avez déjà un chien, vous pouvez adopter Belle quand même !
+							</p>
 							<br>
-							<p>Pour rencontrer ou adopter Belle, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="caracteres">
+							<ul>
+								<li>Race : Chien, Berger Allemand</li>
+								<li>Age: 5 semaines</li>
+								<li>Sexe: Femelle</li>
+								<li>Taille: grand</li>
+							</ul>
+						</td>
+						<td colspan="2">
+							<img src="chiens/belle3.jpg" class="chat"/>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
+							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 						</td>
 					</tr>
 				</table>
