--- a/chien3.htm
+++ b/chien3.htm
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>Chats</title>
+        <title>Suki</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
-		<link rel="stylesheet" type="text/css" href="css/satin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
@@ -20,15 +20,37 @@
             </div>
 			
 			<div>
+				<h3>Suki</h3>
 				<table>
 					<tr>
-						<td><img src="chiens/3.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chiens/suki2.jpg" class="chat"/></td>
 						<td>
-							<p>a<p>
+							<p>
+							Suki est un chien avec beaucoup de personnalité, il va vous surprendre tout les jours :)
+							</p>
 							<br>
-							<p>a</p>
+							<p>
+							Suki est un chien très sportif, qui adore courir et jouer, C'est le chien parfait pour les athlètes et les personnes sportifs.
+							</p>
 							<br>
-							<p>Pour rencontrer ou adopter Suki, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="caracteres">
+							<ul>
+								<li>Race : Chien, Berger Australien</li>
+								<li>Age: 1 ans</li>
+								<li>Sexe: Femelle</li>
+								<li>Taille: grand</li>
+							</ul>
+						</td>
+						<td colspan="2">
+							<img src="chiens/suki3.jpg" class="chat"/>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
+							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 						</td>
 					</tr>
 				</table>
