--- a/cheval.htm
+++ b/cheval.htm
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>Chats</title>
+        <title>Zozor</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
-		<link rel="stylesheet" type="text/css" href="css/satin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
@@ -20,15 +20,37 @@
             </div>
 			
 			<div>
+				<h3>Croco</h3>
 				<table>
 					<tr>
-						<td><img src="exotique/cheval.jpg" class="chat"/></td>
+						<td colspan="2"><img src="exotique/cheval.jpg" class="chat"/></td>
 						<td>
-							<p>a</p>
+							<p>
+							On a sauvé Zozor d'un cirque où il a était mal traité mais aujourd'hui il est très heureux et energetique !
+							</p>
 							<br>
-							<p>a</p>
+							<p>
+							Zozor adore tout les animaux :)
+							</p>
 							<br>
-							<p>Pour rencontrer ou adopter Zozor, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="caracteres">
+							<ul>
+								<li>Race : Cheval, Barbe</li>
+								<li>Age: 5 ans</li>
+								<li>Sexe: Femelle</li>
+								<li>Taille: Moyenne</li>
+							</ul>
+						</td>
+						<td colspan="2">
+							<img src="exotique/cheval2.jpg" class="chat"/>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
+							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 						</td>
 					</tr>
 				</table>
