--- a/chien2.htm
+++ b/chien2.htm
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>Chats</title>
+        <title>Moon</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
-		<link rel="stylesheet" type="text/css" href="css/satin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
@@ -20,15 +20,37 @@
             </div>
 			
 			<div>
+				<h3>Belle</h3>
 				<table>
 					<tr>
-						<td><img src="chiens/2.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chiens/2.jpg" class="chat"/></td>
 						<td>
-							<p>a<p>
+							<p>
+							Moon est le chien parfait si vous avez des enfants. Il adore jouer avec eux et s'occuper d'eux.
+							</p>
 							<br>
-							<p>a</p>
+							<p>
+							De plus il est très calme et tranquille. Moon adore les chat alors si vous en avez il ne faut pas s'inquiéter.
+							</p>
 							<br>
-							<p>Pour rencontrer ou adopter Moon, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="caracteres">
+							<ul>
+								<li>Race : Chien, Labrador Retriever</li>
+								<li>Age: 4 ans</li>
+								<li>Sexe: Male</li>
+								<li>Taille: grand</li>
+							</ul>
+						</td>
+						<td colspan="2">
+							<img src="chiens/moon2.jpg" class="chat"/>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
+							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 						</td>
 					</tr>
 				</table>
