--- a/croco.htm
+++ b/croco.htm
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>Chats</title>
+        <title>Croco</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
-		<link rel="stylesheet" type="text/css" href="css/satin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
@@ -20,15 +20,37 @@
             </div>
 			
 			<div>
+				<h3>Croco</h3>
 				<table>
 					<tr>
-						<td><img src="exotique/croco.jpg" class="chat"/></td>
+						<td colspan="2"><img src="exotique/croco.jpg" class="chat"/></td>
 						<td>
-							<p>a</p>
+							<p>
+							Croco est un animal très exotique et donc vous devez adhérer à plusieurs conditions pour l'adopter.
+							</p>
 							<br>
-							<p>a</p>
+							<p>
+							Croco est très adorable et surtout parce qu'il est encore jeune ;)
+							</p>
 							<br>
-							<p>Pour rencontrer ou adopter Croco, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="caracteres">
+							<ul>
+								<li>Race : Crocodile, Caïmman</li>
+								<li>Age: 2 semaines</li>
+								<li>Sexe: Femelle</li>
+								<li>Taille: Très grand</li>
+							</ul>
+						</td>
+						<td colspan="2">
+							<img src="exotique/croco2.jpg" class="chat"/>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
+							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 						</td>
 					</tr>
 				</table>
