caracteristiques + 2eme photo

--- a/herisson.htm
+++ b/herisson.htm
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>Chats</title>
+        <title>Kiwi</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
-		<link rel="stylesheet" type="text/css" href="css/satin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
@@ -20,15 +20,37 @@
             </div>
 			
 			<div>
+				<h3>Kiwi</h3>
 				<table>
 					<tr>
-						<td><img src="exotique/herisson.jpg" class="chat"/></td>
+						<td colspan="2"><img src="exotique/herisson.jpg" class="chat"/></td>
 						<td>
-							<p>a</p>
+							<p>
+							Kiwi adore faire du sport sur sa roue, il peut rester toute la nuit a courire de dans.
+							</p>
 							<br>
-							<p>a</p>
+							<p>
+							Les hérissons sont des animaux nocturnes et insecticides, pour l'adopter il faut avoir suffisament de connaissance sur les hérissons.
+							</p>
 							<br>
-							<p>Pour rencontrer ou adopter Kiwi, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="caracteres">
+							<ul>
+								<li>Race : Hérisson, domestique</li>
+								<li>Age: 1 an</li>
+								<li>Sexe: Male</li>
+								<li>Taille: 20-30 cm</li>
+							</ul>
+						</td>
+						<td colspan="2">
+							<img src="exotique/herisson2.jpg" class="chat"/>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
+							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 						</td>
 					</tr>
 				</table>
