--- a/tarantule.htm
+++ b/tarantule.htm
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>Chats</title>
+        <title>Mimi</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
-		<link rel="stylesheet" type="text/css" href="css/satin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
@@ -20,15 +20,37 @@
             </div>
 			
 			<div>
+				<h3>Mimi</h3>
 				<table>
 					<tr>
-						<td><img src="exotique/tarantula.jpg" class="chat"/></td>
+						<td colspan="2"><img src="exotique/tarantula.jpg" class="chat"/></td>
 						<td>
-							<p>a</p>
+							<p>
+							Mimi est une tarentle de taille moyenne, elleest calme et aime bien être manipulée de temps en temps.
+							</p>
 							<br>
-							<p>a</p>
+							<p>
+							Il est très facil de s'occuper d'une tarentule, et son terrarium peut être très jolie et décoratif.
+							</p>
 							<br>
-							<p>Pour rencontrer ou adopter Mimi, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+						</td>
+					</tr>
+					<tr>
+						<td class="caracteres">
+							<ul>
+								<li>Race : Tarantule rose mexicaine</li>
+								<li>Age: 8 mois</li>
+								<li>Sexe: Femelle</li>
+								<li>Taille: 10-15 cm</li>
+							</ul>
+						</td>
+						<td colspan="2">
+							<img src="exotique/tarantula2.jpg" class="chat"/>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
+							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 						</td>
 					</tr>
 				</table>
