Le quizz pour le meilleur animal

--- a/questionnaire.htm
+++ b/questionnaire.htm
@@ -23,7 +23,10 @@
 			<div>
 			
 			<p> Ce questionnaire va nous aider à trouver l'animal qui vous convient le mieux</p>
-			
+			<br>
+			<p>
+			Les carrés vous permettent de faire plusieurs choix, et les cercle vous permettent de faire un choix unique.
+			</p>
 			
 			<form id="formulaire">
 			<table>
