modification generateur de pseudo plus réaliste

--- a/menu.htm
+++ b/menu.htm
@@ -26,6 +26,8 @@
                 <li>Adresse mail</li>
             </ul>
         </li>
+		<li><a href="generateur-pseudo.htm">Générateur</a>
+		</li>
     </ul>
 
 	
