--- a/generateur-pseudo.htm
+++ b/generateur-pseudo.htm
@@ -12,7 +12,7 @@
 		
 		
 		<button onclick="generer()">Nom aléatoire</button>
-		<input id='resultat' type="text" placeholder='Prénom personalisé' readonly/>
+		<input id='resultat' type="text" size="50" placeholder='Prénom personalisé' readonly/>
 		
 		<p><a class="ancre_menu" href="#menu"><img id="ancre" src="ancre.png"/></a></p>			
 		<script src="js/jquery-3.3.1.min.js"></script>
@@ -21,7 +21,8 @@
 		
 		<script>		
 			var res = document.getElementById('resultat');
-			var parts = ['lulu', 'huhu', 'kra', 'bibi', 'lamu', 'crepy', 'dirty', 'vausi', 'momi', 'popy'];
+			//var parts = ['lulu', 'huhu', 'kra', 'bibi', 'lamu', 'crepy', 'dirty', 'vausi', 'momi', 'popy'];
+			var parts = ['ma', 'mi', 'mo', 'mu', 'pa', 'pi', 'po', 'pu', 'py', 'la', 'li', 'lo', 'lu', 'ka', 'ki', 'ko', 'ku', 'cu', 'ra', 'ri', 'ro', 'ru', 'fa', 'fi', 'fo', 'fu', 'fy', 'a', 'ni', 'no', 'nu', 'shee', 'cha', 'chi', 'cho', 'chu'];
 			var MAX_PARTS = 5;
 			var MIN_PARTS = 2;
 			
