J'ai rajouté le lien pour le generateur pseudo

--- a/menu.htm
+++ b/menu.htm
@@ -7,7 +7,8 @@
                 <li><a href="exotique.htm">Exotique<a></li>
             </ul>
         </li>
-	<li><a href="questionnaire.htm">Questionnaire</a></li>
+		<li><a href="questionnaire.htm">Quiz</a></li>
+		<li><a href="generateur-pseudo.htm">Generateur Pseudo</a></li>
         <li>FAQ
             <ul>
                 <li><a href="qui-sommes-nous.htm">Qui sommes nous</a></li>
