--- a/chien1.htm
+++ b/chien1.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Chats</title>
+        <title>Belle</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
@@ -23,7 +23,7 @@
 				<h3>Belle</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="chiens/belle2.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chiens/1.jpg" class="chat"/></td>
 						<td>
 							<p>
 							Belle est un petit chiot de 5 semaine, il a était trouvé tout seul sans sa mère, mais il est déjà très havitué aux gens.
@@ -38,14 +38,14 @@
 					<tr>
 						<td class="caracteres">
 							<ul>
-								<li>Race : Chien, Berger Allemand</li>
+								<li>Race : Chien, Spitz-loup (ou Keeshond, Allemand)</li>
 								<li>Age: 5 semaines</li>
 								<li>Sexe: Femelle</li>
 								<li>Taille: grand</li>
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chiens/belle3.jpg" class="chat"/>
+							<img src="chiens/belle2.jpg" class="chat"/>
 						</td>
 					</tr>
 					<tr>
