--- a/chien3.htm
+++ b/chien3.htm
@@ -23,7 +23,7 @@
 				<h3>Suki</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="chiens/suki2.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chiens/3.jpg" class="chat"/></td>
 						<td>
 							<p>
 							Suki est un chien avec beaucoup de personnalité, il va vous surprendre tout les jours :)
@@ -45,7 +45,7 @@
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chiens/suki3.jpg" class="chat"/>
+							<img src="chiens/suki2.jpg" class="chat"/>
 						</td>
 					</tr>
 					<tr>
