Ce fichier est valide

--- a/adopter.htm
+++ b/adopter.htm
@@ -1,6 +1,7 @@
 <!doctype html>
 
-<html>
+<html lang="fr">
+	<!-- ce document est validé -->
     <head>
         <title>index</title>
         <meta charset="utf-8">
@@ -24,7 +25,8 @@
 					<h2> Vous voulez adopter un animal de compagnie?</h2>
 					<p>
 					Notre association vous permet d'adopter l'animal de vos rêves très facilement et rapidement. Mais il y a toujours certaines conditions aux quels vous devez adhérer pour pouvoir le faire.
-					</p><br>
+					</p>
+					<br>
 					<p>Bien sur ces conditions vont être différent selon l'animal que vous souhaitez</p>
 					<br>
 					<p>Les conditions qui suivent s'appliquent généralement aux chats et cheins, pour des informations suplémentaires, ou des informations sur un autre animal contactez nous.
@@ -90,7 +92,7 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 			
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
