--- a/adopter-serpent.htm
+++ b/adopter-serpent.htm
@@ -1,6 +1,7 @@
 <!doctype html>
 
-<html>
+<html lang="fr">
+	<!-- Ce fichier est valide -->
     <head>
         <title>index</title>
         <meta charset="utf-8">
@@ -32,43 +33,64 @@
 				<br>
 				<ol>
 					<li>
+						<p>
 						C'est silencieux
+						</p>
+						<br>
 					</li>
-					<br>
 					<li>
+						<p>
 						C'est facil à nourrire, il suffit de lui donner à manger une fois par semiane environ !
+						</p>
+						<br>
 					</li>
-					<br>
 					<li>
+						<p>
 						Le terrarium peut être très décoratif et jolie
+						</p>
+						<br>
 					</li>
-					<br>
 					<li>
+						<p>
 						Des excréments inodores et pratiques
+						</p>
+						<br>
 					</li>
-					<br>
 					<li>
+						<p>
 						Le nettoyage du terrarium est facile, et il n'est pas nécessaire de le faire très fréquament (1fois toutes les 3 semaines généralement)
+						</p>
+						<br>
 					</li>
-					<br>
 					<li>
+						<p>
 						Le serpent ne fait pas de bêtises
+						</p>
+						<br>
 					</li>
-					<br>
 					<li>
+						<p>
 						Il n'a pas besoin de vaccins
+						</p>
+						<br>
 					</li>
-					<br>
 					<li>
+						<p>
 						ça durée de vie est de 15 à 20 ans en moyenne
+						</p>
+						<br>
 					</li>
-					<br>
 					<li>
+						<p>
 						Pas d'alergies
+						</p>
+						<br>
 					</li>
-					<br>
 					<li>
+						<p>
 						Pas de promenades
+						</p>
+						<br>
 					</li>
 				</ol>
 			</div>
@@ -105,12 +127,11 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 			
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
-		<script src="https://www.youtube.com/iframe_api"></script>
 			
 		<script>
 			$('#contenu').css('height', $('#contenu div:nth-child(2)').css('height'));
