--- a/chat-heureux.htm
+++ b/chat-heureux.htm
@@ -1,7 +1,8 @@
 <!doctype html>
 
-<html>
+<html lang="fr">
     <head>
+		<!-- Valide -->
         <title>index</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/index.css"/>
@@ -189,12 +190,11 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 			
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
-		<script src="https://www.youtube.com/iframe_api"></script>
 			
 		<script>
 			$('#contenu').css('height', $('#contenu div:nth-child(2)').css('height'));
