--- a/chatsatin.htm
+++ b/chatsatin.htm
@@ -1,7 +1,8 @@
 <!doctype html>
-<html>
+<html lang="fr">
+	<!-- Validé -->
     <head>
-        <title>Chats</title>
+        <title>Satin</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
@@ -23,7 +24,7 @@
 				<h3>Satin</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="chats/satin.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chats/satin.jpg" class="chat" alt="satin"/></td>
 						<td>
 							<p>Depuis très lontemps les chats noir ont était associés avec des idées négatives. mais on est là pour vous assurez q'un chat noir n'est qu'une petite boule d'amour :)<p>
 							<br>
@@ -41,7 +42,7 @@
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chats/satin2.jpg" class="chat"/>
+							<img src="chats/satin2.jpg" class="chat" alt="satin2"/>
 						</td>
 					</tr>
 					<tr>
@@ -83,7 +84,7 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
