--- a/chatsleepy.htm
+++ b/chatsleepy.htm
@@ -1,7 +1,7 @@
 <!doctype html>
-<html>
+<html lang="fr">
     <head>
-        <title>Chats</title>
+        <title>Sleepy</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
@@ -23,7 +23,7 @@
 				<h3>Sleepy le chaton</h3>
 				<table id="tab1">
 					<tr>
-						<td colspan="2"><img src="chats/sleepy.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chats/sleepy.jpg" class="chat" alt="sleepy"/></td>
 						<td>
 							<p>Sleepy est un chaton de 1 mois et demi. c'est une boule d'énergie mais il apprécie beaucoup ces siestes :3</p>
 							<br>
@@ -40,7 +40,7 @@
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chats/sleepy3.jpg" class="chat"/>
+							<img src="chats/sleepy3.jpg" class="chat" alt="sleepy2"/>
 						</td>
 					</tr>
 					<tr>
@@ -82,7 +82,7 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
