--- a/chattigre.htm
+++ b/chattigre.htm
@@ -1,7 +1,8 @@
 <!doctype html>
-<html>
+<html lang="fr">
     <head>
-        <title>Chats</title>
+		<!-- Validé -->
+        <title>Tigre</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
@@ -23,7 +24,7 @@
 				<h3>Satin</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="chats/tigre2.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chats/tigre2.jpg" class="chat" alt="tigre"/></td>
 						<td>
 							<p>Tigre est un chat très sportif et adore les enfants. En plus il est très facile de jouer avec lui.</p>
 							<br>
@@ -41,7 +42,7 @@
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chats/tigre.jpg" class="chat"/>
+							<img src="chats/tigre.jpg" class="chat" alt="tigre"/>
 						</td>
 					</tr>
 					<tr>
@@ -83,7 +84,7 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
