--- a/chien2.htm
+++ b/chien2.htm
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="fr">
     <head>
+		<!-- Validé -->
         <title>Moon</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
@@ -23,7 +24,7 @@
 				<h3>Belle</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="chiens/2.jpg" class="chat"/></td>
+						<td colspan="2"><img src="chiens/2.jpg" class="chat" alt="moon"/></td>
 						<td>
 							<p>
 							Moon est le chien parfait si vous avez des enfants. Il adore jouer avec eux et s'occuper d'eux.
@@ -45,7 +46,7 @@
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chiens/moon2.jpg" class="chat"/>
+							<img src="chiens/moon2.jpg" class="chat" alt="moon2"/>
 						</td>
 					</tr>
 					<tr>
@@ -87,7 +88,7 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
