--- a/cheval.htm
+++ b/cheval.htm
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="fr">
     <head>
+		<!-- validé -->
         <title>Zozor</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
@@ -23,7 +24,7 @@
 				<h3>Croco</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="exotique/cheval.jpg" class="chat"/></td>
+						<td colspan="2"><img src="exotique/cheval.jpg" class="chat" alt="cheval"/></td>
 						<td>
 							<p>
 							On a sauvé Zozor d'un cirque où il a était mal traité mais aujourd'hui il est très heureux et energetique !
@@ -45,7 +46,7 @@
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="exotique/cheval2.jpg" class="chat"/>
+							<img src="exotique/cheval2.jpg" class="chat" alt="cheval2"/>
 						</td>
 					</tr>
 					<tr>
@@ -87,7 +88,7 @@
             <p>&copy; 2018 Inside Corporation</p>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png"/></a></p>
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
