divers changes index

--- a/menu.htm
+++ b/menu.htm
@@ -2,9 +2,9 @@
         <li><a href="index.htm">Acceuil</a></li>
         <li><a href="nos-animaux.htm">Nos animaux</a>
             <ul>
-                <li><a href="chat.htm">Chats<a></li>
-                <li><a href="chien.htm">Chiens<a></li>
-                <li><a href="exotique.htm">Exotique<a></li>
+                <li><a href="chat.htm">Chats</a></li>
+                <li><a href="chien.htm">Chiens</a></li>
+                <li><a href="exotique.htm">Exotique</a></li>
             </ul>
         </li>
 		<li><a href="questionnaire.htm">Quiz</a></li>
@@ -30,7 +30,3 @@
 		<li><a href="generateur-pseudo.htm">Générateur</a>
 		</li>
     </ul>
-
-	
-	<!-- Zozor le cheval</li>
-                <li>Koko le croco -->
