deplacer style ancre dans menu.css

--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
 		
 		<footer>
 			<p>&copy; 2018 Inside Corporation</p>
-			<a class='ancre' href='h1'><img src="ancre.png" alt="ancre" /></a>
+			<a class='ancre_menu' href='#'><img src="ancre.png" alt="ancre" /></a>
 		</footer>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
